--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Test Home Page</h1>
-{{1+1}}
+{{3+3}}
 
 
 <div ui-view="header"></div>
@@ -16,7 +16,10 @@
 <!-- ui-sref takes you to a different state -->
   <div ui-view="signup"></div>
   <div ui-view="signin"></div>
+  <div ui-view="testa"></div>
+  <div ui-view="testb"></div>
   <a ui-sref="home">Click to go to main</a>
+  <a ui-sref="testpage">Click to go to test</a>
 
 <!-- When main is up put a main.footer and a main.header -->
 
