--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,3 +1,3 @@
 <h1>Insert Sign Up Form Here</h1>
-<button ui-sref="auth">Click Me to Sign Up!</button>
+<md-button ui-sref="auth">Click Me to Sign Up!</md-button>
 <!-- Ui sref to some other page most likely -->
