--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  
   <title></title>
 </head>
 <body>
