Experimenting with different css

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
   <!--main page content-->
   <div ui-view="header"></div>
   <div class="container">
@@ -24,7 +25,7 @@
     
     <!--  In the future this could be part of a view-->
     <br><br>
-    <div class="row">
+<!--     <div class="row">
       <div class="col s12">  
         <ul class="tabs">
          <li class="tab col s3"> <a ui-sref="signup">Click to go to signup</a> </li>
@@ -33,7 +34,7 @@
          <li class="tab col s3"> <a ui-sref="dashboard">Click to go to dashboard</a> </li>
         </ul>
       </div>
-    </div>
+    </div> -->
     <br>
 
   </div>
