--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
   <script src="app/browse/browse.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/dashboard/dashboard.js"></script>
-  <script src="app/roadmaps/roadmaps.js"></script>
+  <script src="app/roadmaps/roadmapController.js"></script>
+  <script src="app/roadmaps/roadmapFactory.js"></script>
   <script src="app/roadmaps/creation.js"></script>
 </html>
