--- a/client/app/roadmaps/content.html
+++ b/client/app/roadmaps/content.html
@@ -34,6 +34,12 @@
         <a class="waves-effect waves-light btn-large blue-grey lighten-1 col s6 offset-s3" ng-click="submitCompletedRoadmap()">
         Map Done
         </a>
+         <a class="waves-effect waves-light btn-large blue-grey lighten-1 col s6 offset-s3" ng-click="upVoteMap()">
+        up vote
+        </a>
+         <a class="waves-effect waves-light btn-large blue-grey lighten-1 col s6 offset-s3" ng-click="downVoteMap()">
+        down vote
+        </a>
       </div>
     </div>
   </div>
