(fix) Add icon to welcome message

--- a/client/app/main/welcome.html
+++ b/client/app/main/welcome.html
@@ -1,4 +1,5 @@
- <h5>Welcome to <b>Roadmap To Anything!</b></h5>
+<h5> <i class="fa fa-motorcycle fa-4x" style="color:#B62400" position="center-align"></i>Welcome to <b>Roadmap To Anything!</b></h5>
+<div><h5> Welcome to <b>Roadmap To Anything!</b></h5></div>
 <!--     {{1+1}} -->
 
  <div class="row">
