(cleaup) Remove extra p tags in about page

--- a/client/app/main/about.html
+++ b/client/app/main/about.html
@@ -36,10 +36,8 @@
               <!-- <span class="card-title">Zac Delventhal</span> -->
             </div>
             <div class="card-content">
-
-              <p>Zac Delventhal</p>
+              <p><b>Zac Delventhal</b></p>
               <p>Project Owner/Full-Stack Engineer</p>
-
             </div>
           </div>
         </div>
@@ -48,11 +46,9 @@
           <div class="card">
             <div class="card-image">
               <img src="images/brendan.png">
-
-              <span class="card-title">Brendan Grady</span>
             </div>
             <div class="card-content">
-              <p>Brendan Grady</p>
+              <p><b>Brendan Grady</b></p>
               <p>Back-end Engineer</p>
             </div>
           </div>
