--- a/client/app/main/tutorial.html
+++ b/client/app/main/tutorial.html
@@ -1,21 +1,26 @@
 <br><br>
-<h4>Welcome to our tutorial! Let's get started on how to create a roadmap:</h4>
-<h4>Sign into your account and select "Create a roadmap" from the menu:</h4>
-<div class="row">
-<img src="images/t1.png" height="400px">
-</div>
+<h4><b>Welcome to our tutorial! <i>Let's get started on how to create a roadmap.</i></b></h4>
 <br><br>
+<h4>Sign into your account and select "Create a roadmap" from the menu:</h4>
+<br>
+<div class="row">
+<img src="images/t1.png" width="1300">
+</div>
+<br><br><br><br>
 <div class="row">
 <h4>Fill out the title and description for each step (which represents one resource):</h4>
-<img src="images/t2.png" height="400px">
+<br>
+<img src="images/t2.png" width="1300">
 </div>
-<br><br>
+<br><br><br><br>
 <div class="row">
-<h4>Each node has an information box that has an editable title, description, and link(s). Click to immediately edit the information.</h4>
-<img src="images/t3.png" height="400px">
+<h4>Each node has an information box that has an editable title, description, and link(s). Click to immediately edit the information:</h4>
+<br>
+<img src="images/t3.png" width="1300">
 </div>
-<br><br>
+<br><br><br><br>
 <div class="row">
-<h4>To immediately create a new node to add to the roadmap, simply click the "+"! Nodes can be quickly added this way and your roadmap can easily be exapanded from here.</h4>
-<img src="images/t4.png" height="400px">
+<h4>To immediately create a new node to add to the roadmap, simply click the "+"! Nodes can be quickly added this way and your roadmap can easily be expanded from here:</h4>
+<br>
+<img src="images/t4.png" width="1300">
 </div>
